--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Abhi Upade</title>
+</head>
+<body>
+<h1 align="center" style="color:aqua;">hello abhi</h1>
+<a href="main.html">click me</a>
+</body>
+</html>
